# tempest

./: .gitignore  CMakeLists.txt  build.sh  license  readme.md
src/: main.cpp
src/cli/: dump.cpp  inspect.cpp  main.cpp  run.cpp  touch.cpp
src/core/: Environment.hpp  File.cpp  File.hpp  Inspector.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  generic.hpp  metadata.hpp  utils.cpp  utils.hpp
